--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
+.Red {
+    border-radius: 50%;
+    background-color: red;
+    width: 200px;
+    height: 200px;
+}
 
-/* 
+.Yellow {
+    border-radius: 50%;
+    background-color: yellow;
+    width: 200px;
+    height: 200px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.Green {
+    border-radius: 50%;
+    background-color: rgb(49, 182, 49);
+    width: 200px;
+    height: 200px;
+}
 
-*/
+.Estructura {
+    background-color: black;
+    width: 220px;
+}
